--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,5 @@
 main:
-  - title: "Posts"
+  - title: "Serviços"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "Sobre a Jao Pinturas"
+  - title: "Sobre a "
     url: /quem-somos/
