--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl:   # the subpath of your site, e.g. /blog
-url: choptian.com.br/pinturas/ "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /pinturas  # the subpath of your site, e.g. /blog
+url: http://choptian.com.br "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
 
 locale: pt-BR
-# Build settings
-markdown: kramdown
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
