--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_username:
 
 locale: pt-BR
 # Outputting
-permalink: /:categories/:title/
+permalink: /:categories-:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
