--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
 
-title: Epóxi
+title: Demarca
 subtitle: Sinalização e Pintura
-email: your-email@example.com
+email: vanderson_choptian@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
